tipos de variables, funciones, diferencia let y var, ngOnInit

--- a/curso-angular4/angular.json
+++ b/curso-angular4/angular.json
@@ -132,5 +132,10 @@
       }
     }
   },
-  "defaultProject": "curso-angular4"
+  "defaultProject": "curso-angular4",
+  "schematics": {
+    "@schematics/angular:component": {
+      "styleext": "scss"
+    }
+  }
 }
